--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,33 @@
                   <div class="card-body">
                     <img src="assets/img/pour-decisions.png" class="card-img-top" alt="...">
                     <hr>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pourBackdrop">
+                      Enlarge
+                    </button>
+                    <hr>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="pourBackdrop" data-backdrop="static" data-keyboard="false"
+                      tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">POUR DECISIONS</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <img src="assets/img/pour-decisions.png" class="card-img-top" alt="...">
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End of modal -->
                     <p class="card-text">Pour Decisions is an app that takes some of the time out of finding a recipe
                       for
                       dinner
