--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
 <body>
   <!-- Nav bar -->
+  <!-- Nav bar -->
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand text-white font-weight-bold" href="./index.html">James Wheeler</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -27,46 +28,60 @@
           <a class="nav-link" href="./index.html">Home |</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./about.html">About |</a>
+          <a class="nav-link active" href="./about.html">About |</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./portfolio.html">Portfolio |<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </nav>
   </nav>
-  <!-- Card -->
-  <main class="container mt-2 mb-4">
+  <!--Card-->
+  <!--Card container-->
+  <main class="container">
+    <!--Card row-->
     <section class="row">
-      <article class="col-12 card my-3 mb-5">
-        <h1 class="card-header text-info font-weight-bold">Contact</h1>
-
-        <form class="col-7 m-3">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-              placeholder="Enter email" />
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Name</label>
-            <input class="form-control" id="exampleInputPassword1" placeholder="Name" />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <form class="col-2 m-3"></form>
+      <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
+      <article class="card portrait-info col-sm-12 my-5">
+        <!--Card header has info(teal) colored text and bold font-->
+        <h1 class="card-header text-white font-weight-bold">About Me</h1>
+        <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
+        <section class="my-3 mx-2">
+          <!--The image has css styling in the style.css file-->
+          <img id="portrait" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" />
+          <p>
+            Front-end web developer leveraging design and writing background to build a more intuitive user experience
+            on the web. Certified in full stack development from the University of Johns Hopkins, with experience in
+            JavaScript, CSS, HTML, JQUERY and responsive web design. Citizen coder who designed automations in
+            Javascript and Python for Adobe stack for Stanley Black and Decker that saved the company forty weeks of
+            manual data entry a year. 
+          </p>
+          <p>
+            My automated layout system merited an Eagle Award for SBD employee of the year. To
+            build the system, I taught myself Javascript and Python on weekends. I applied agile design to develop the
+            system. I improve efficiency. I have fifteen years of supervisor experience. I am a committed lifelong
+            learner who is willing to educate myself through any available means. Experienced in meeting and beating
+            deadlines.
+          </p>
+          <hr>
+          <h5 class="contact-about">CONTACT ME</h5>
+          <span class="badge badge-light">(410) 302 1006</span>
+          <span class="badge badge-light">wheelewell@yahoo</span>
+          <p>
+            <span class="badge badge-light"><a href="https://www.linkedin.com/in/james-w-54270740/" class="contact-list"
+              target="_blank">LINKED IN </a></span>
+            
+              <span class="badge badge-light"><a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB </a></span>
+                <span class="badge badge-light"><a href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"
+                class="contact-list" target="_blank"> RESUME </a></span>
+        </p>
+        </section>
       </article>
     </section>
-
   </main>
-
   <!--Footer with centered text, fixed bottom, secondary background, white text-->
   <div class="card-footer text-muted text-center">
     <p>
@@ -74,7 +89,6 @@
     </p>
     </footer>
   </div>
-
   <!-- JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
