--- a/index.html
+++ b/index.html
@@ -2,100 +2,97 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Index</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link class="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Index</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./assets/css/style_index.css" />
+    <link class="favicon" rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 
 <body>
-  <!-- Nav bar -->
-  <!-- Nav bar -->
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white font-weight-bold" href="./index.html">James Wheeler</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <nav class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="./index.html">About |</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Portfolio |<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
+    <!-- Nav bar -->
+    <nav class="navbar navbar-dark">
+        <a class="navbar-brand text-white-50" href="./index.html">James Wheeler</a>
+        <button class="navbar-toggler text-white-50" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-white-50"></span>
+        </button>
+        <nav class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="./index.html">Home |</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About |</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portfolio.html">Portfolio |<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </nav>
     </nav>
-  </nav>
-  <!--Card-->
-  <!--Card container-->
-  <main class="container">
-    <!--Card row-->
-    <section class="row">
-      <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
-      <article class="card portrait-info col-sm-12 my-5">
-        <!--Card header has info(teal) colored text and bold font-->
-        <h1 class="card-header text-white font-weight-bold">About Me</h1>
-        <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
-        <section class="my-3 mx-2">
-          <!--The image has css styling in the style.css file-->
-          <img id="portrait" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" />
-          <p>
-            Front-end web developer leveraging design and writing background to build a more intuitive user experience
-            on the web. Certified in full stack development from the University of Johns Hopkins, with experience in
-            JavaScript, CSS, HTML, JQUERY and responsive web design. Citizen coder who designed automations in
-            Javascript and Python for Adobe stack for Stanley Black and Decker that saved the company forty weeks of
-            manual data entry a year. My automated layout system merited an Eagle Award for SBD employee of the year. To
-            build the system, I taught myself Javascript and Python on weekends. I applied agile design to develop the
-            system. I improve efficiency. I have fifteen years of supervisor experience. I am a committed lifelong
-            learner who is willing to educate myself through any available means. Experienced in meeting and beating
-            deadlines.
-          </p>
-          <ul class="list-group list-group-horizontal">
-            <li class="list-group-item nav-web-button"><a href="https://www.linkedin.com/in/james-w-54270740/" target="_blank"><i
-                  class="fab fa-linkedin"></i>
-                Linked In</a></li>
-            <li class="list-group-item"><a href="https://github.com/jrtwheeler" target="_blank"><i class="fab fa-github"></i>
-                Github</a></li>
-            <li class="list-group-item"><i class="fas fa-envelope-square"></i>
-                wheelewell@yahoo.com</a></li>
-            <li class="list-group-item"><a
-                href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing" target="_blank"><i
-                  class="fas fa-file"></i>
-                </i>
-                Resume</a></li>
+    <!--Card-->
+    <!--Card container-->
+    <main class="container">
+        <!--Card row-->
+        <section class="row">
+            <!--Card column content is centerered and margin for y-axis is 5. Column is full 12 rows on small screens and larger-->
+            <article class="card portrait-info col-sm-12 my-5">
+                <!--Card header has info(teal) colored text and bold font-->
+                <h1 class="card-header text-white font-weight-bold">Hello, I'm James Wheeler</h1>
+                <hr class="rule-lines">
+                <!--Margin for the y axis of the section is 3, 2 for the x axis.-->
+                <section class="my-3 mx-2">
+                    <!--The image has css styling in the style.css file-->
+                    <!-- <img id="portrait" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" /> -->
+                    <h2 class="subhead col-sm-8">
+                        Citizen coder with a <span>Johns Hopkins</span> education currently coding at <span>Stanley
+                            Black and Decker</span>
+                    </h2>
+                    <br>
+                    <p>
+                        _______________
+                    </p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/james-w-54270740/" class="contact-list"
+                            target="_blank">LINKED IN / </a>
+                        <a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB / </a>
+                        <a href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"
+                            class="contact-list" target="_blank"> RESUME </a>
+                    </p>
 
-          </ul>
+                    <p>
+                        _______________
+                    </p>
+                </section>
+            </article>
         </section>
-      </article>
-    </section>
-  </main>
-  <!--Footer with centered text, fixed bottom, secondary background, white text-->
-  <div class="card-footer text-muted text-center">
-    <p>
-      Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> in Baltimore.
-    </p>
-    </footer>
-  </div>
-  <!-- JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+    </main>
+    <!--Footer with centered text, fixed bottom, secondary background, white text-->
+    <div class="card-footer text-muted text-center">
+        <p>
+            Made with <i class="fas fa-heart"></i> and <i class="fas fa-coffee"></i> in Baltimore.
+        </p>
+        </footer>
+    </div>
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
