--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,10 @@
     <nav class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./index.html">About |</a>
+          <a class="nav-link" href="./index.html">Home |</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./about.html">About |</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="./portfolio.html">Portfolio |<span class="sr-only">(current)</span></a>
