Revised list of computer coding languages to badges

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,8 +81,8 @@
                     <hr>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="pourBackdrop" data-backdrop="static" data-keyboard="false"
-                      tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal fade" id="pourBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+                      aria-labelledby="staticBackdropLabel" aria-hidden="true">
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
@@ -113,12 +113,12 @@
                       recipe.
                     </p>
                     <div class="row">
-                      <!-- This is a bootstrap list group -->
-                      <ul class="list-group list-group-sm m-2">
-                        <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
-                        <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
-                        <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
-                        <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
+                      <ul>
+                        <li><span class="badge badge-light">Javascript</span></li>
+                        <li><span class="badge badge-light">JQUERY</span></li>
+                        <li><span class="badge badge-light">Bulma</span></li>
+                        <li><span class="badge badge-light">HTML</span></li>
+                        <li><span class="badge badge-light">CSS</span></li>
                       </ul>
                     </div>
                     <div class="row">
@@ -195,12 +195,12 @@
                       history becomes buttons that can activate the API call for the weather forecast.
                     </p>
                     <div class="row">
-                      <!-- This is a bootstrap list group -->
-                      <ul class="list-group list-group-sm m-2">
-                        <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
-                        <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
-                        <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
-                        <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
+                      <ul>
+                        <li><span class="badge badge-light">Javascript</span></li>
+                        <li><span class="badge badge-light">JQUERY</span></li>
+                        <li><span class="badge badge-light">Boostrap</span></li>
+                        <li><span class="badge badge-light">HTML</span></li>
+                        <li><span class="badge badge-light">CSS</span></li>
                       </ul>
                     </div>
                     <div class="row">
@@ -277,12 +277,12 @@
                       history becomes buttons that can activate the API call for the weather forecast.
                     </p>
                     <div class="row">
-                      <!-- This is a bootstrap list group -->
-                      <ul class="list-group list-group-sm m-2">
-                        <li class="list-group-item"><i class="fas fa-code"></i> Coding Language</li>
-                        <li class="list-group-item"><i class="fab fa-js-square"> Javascript</i></li>
-                        <li class="list-group-item"><i class="fab fa-html5"></i> HTML5</li>
-                        <li class="list-group-item"><i class="fab fa-css3-alt"></i> CSS</li>
+                      <ul>
+                        <li><span class="badge badge-light">Javascript</span></li>
+                        <li><span class="badge badge-light">JQUERY</span></li>
+                        <li><span class="badge badge-light">Boostrap</span></li>
+                        <li><span class="badge badge-light">HTML</span></li>
+                        <li><span class="badge badge-light">CSS</span></li>
                       </ul>
                     </div>
                     <div class="row">
