Added a font awesome image to enlarge button

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                     <hr>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pourBackdrop">
-                      Enlarge
+                      <i class="fas fa-search-location"></i> Enlarge
                     </button>
                     <hr>
 
@@ -162,7 +162,7 @@
                     <hr>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#weatherBackdrop">
-                      Enlarge
+                      <i class="fas fa-search-location"></i> Enlarge
                     </button>
 
                     <!-- Modal -->
@@ -244,7 +244,7 @@
                     <hr>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-                      Enlarge
+                      <i class="fas fa-search-location"></i> Enlarge
                     </button>
 
                     <!-- Modal -->
