Added vertical rule line to cards on Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,15 +71,15 @@
                 </div>
 
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionP">
-                  <div class="card-body">
-                    <img src="assets/img/pour-decisions.png" class="card-img-top" alt="...">
+                  <div class="card-body border-left">
+                    <div class="container">
+                      <img src="assets/img/pour-decisions.png" alt="Snow" style="width:100%;">
+                      <!-- Button trigger modal -->
+                      <div class="centered"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pourBackdrop">
+                        <i class="fas fa-search-location"></i> Enlarge
+                      </button></div>
+                    </div>
                     <hr>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pourBackdrop">
-                      <i class="fas fa-search-location"></i> Enlarge
-                    </button>
-                    <hr>
-
                     <!-- Modal -->
                     <div class="modal fade" id="pourBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
                       aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -157,7 +157,7 @@
                 </div>
 
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionW">
-                  <div class="card-body">
+                  <div class="card-body border-left">
                     <img src="assets/img/weather-dashboard.png" class="card-img-top" alt="Weather-Dashboard">
                     <hr>
                     <!-- Button trigger modal -->
@@ -239,7 +239,7 @@
                 </div>
 
                 <div id="collapseThree" class="collapse" aria-labelledby="headingOne" data-parent="#accordionN">
-                  <div class="card-body">
+                  <div class="card-body border-left">
                     <img src="assets/img/nyt-archive.png" class="card-img-top" alt="NYTSearch">
                     <hr>
                     <!-- Button trigger modal -->
