Added third project to revised portfolio

--- a/portfolio_2.html
+++ b/portfolio_2.html
@@ -51,7 +51,6 @@
             JQUERY.
         </p>
         <a class="btn btn-primary btn-lg contact-me" href="contact.html" role="button">Contact Me</a>
-        <hr class="my-4">
     </div>
     <!-- Accordian header -->
     <div class="accordion" id="PortfolioAccordian">
@@ -73,7 +72,7 @@
                         <div class="row no-gutters">
                             <div class="col-md-2 m-4">
                                 <img src="assets/img/pour-decisions-detail.png" class="card-img-top" id="pour-decisions"
-                                    alt="...">
+                                    alt="Pour Decisions">
                             </div>
                             <div class="col-md-9">
                                 <div class="card-body">
@@ -131,10 +130,8 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <img src="assets/img/pour-decisions.png" class="card-img-top" id="pour-decisions" alt="...">
-                        <hr>
                         <img src="assets/img/pour-decisions-phone.png" class="card-img-top" id="pour-decisions"
-                            alt="...">
+                            alt="Pour Decisions">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -153,57 +150,60 @@
                     </button>
                 </h2>
             </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#PortfolioAccordian">
-                <<div class="card-body">
-                    <div class="jumbotron my-0">
-                        <div class="card mb-3">
-                            <div class="row no-gutters">
-                                <div class="col-md-2 m-4">
-                                    <img src="assets/img/weather-dashboard-detail.png" class="card-img-top"
-                                        id="pour-decisions" alt="...">
-                                </div>
-                                <div class="col-md-9">
-                                    <div class="card-body">
-                                        <h5 class="card-title">WEATHER DASHBOARD</h5>
-                                        <hr>
-                                        <p class="lead">Find the day's forecast</p>
-                                        <hr>
-                                        <p class="card-text">>The weather dashboard makes three API calls to open
-                                            weather to return the
-                                            daily
-                                            and five day
-                                            forecast for a city the user inputs. The user inputs are saved to local
-                                            storage as user history.
-                                            The user
-                                            history becomes buttons that can activate the API call for the weather
-                                            forecast.
-                                            <span class="badge badge-light">Javascript</span>
-                                            <span class="badge badge-light">JQUERY</span>
-                                            <span class="badge badge-light">Boostrap</span>
-                                            <span class="badge badge-light">HTML</span>
-                                            <span class="badge badge-light">CSS</span></p>
-                                        <hr>
-                                        <p class="card-text"><small class="text-muted"><button type="button"
-                                                    class="btn btn-primary btn-md contact-me" data-toggle="modal"
-                                                    data-target="#weatherBackdrop" data-toggle="tooltip"
-                                                    data-placement="top" title="View a thumbnail of the page">
-                                                    <i class="fas fa-search-location"></i> Thumbnail
-                                                </button>
-                                                <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
-                                                    class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
-                                                    data-placement="top" title="View Github Repository"><i
-                                                        class="fab fa-github"></i> See More</a>
-                                                <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
-                                                    class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
-                                                    data-placement="top" title="View Webpage"><i
-                                                        class="fas fa-globe"></i>
-                                                    Open</a></small></p>
-                                    </div>
+        </div>
+
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#PortfolioAccordian">
+            <div class="card-body">
+                <div class="jumbotron my-0">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-2 m-4">
+                                <img src="assets/img/weather-dashboard-detail.png" class="card-img-top"
+                                    id="weather-dashboard" alt="Weather Dashboard">
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-body">
+                                    <h5 class="card-title">WEATHER DASHBOARD</h5>
+                                    <hr>
+                                    <p class="lead">Find the day's forecast</p>
+                                    <hr>
+                                    <p class="card-text">The weather dashboard makes three API calls to open
+                                        weather to return the
+                                        daily
+                                        and five day
+                                        forecast for a city the user inputs. The user inputs are saved to local
+                                        storage as user history.
+                                        The user
+                                        history becomes buttons that can activate the API call for the weather
+                                        forecast.
+                                        <span class="badge badge-light">Javascript</span>
+                                        <span class="badge badge-light">JQUERY</span>
+                                        <span class="badge badge-light">Boostrap</span>
+                                        <span class="badge badge-light">HTML</span>
+                                        <span class="badge badge-light">CSS</span></p>
+                                    <hr>
+                                    <p class="card-text"><small class="text-muted"><button type="button"
+                                                class="btn btn-primary btn-md contact-me" data-toggle="modal"
+                                                data-target="#weatherBackdrop" data-toggle="tooltip"
+                                                data-placement="top" title="View a thumbnail of the page">
+                                                <i class="fas fa-search-location"></i> Thumbnail
+                                            </button>
+                                            <a href="https://github.com/jrtwheeler/Weather-Dashboard" target="_blank"
+                                                class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
+                                                data-placement="top" title="View Github Repository"><i
+                                                    class="fab fa-github"></i> See
+                                                More</a>
+                                            <a href="https://jrtwheeler.github.io/Weather-Dashboard/" target="_blank"
+                                                class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
+                                                data-placement="top" title="View Webpage"><i class="fas fa-globe"></i>
+                                                Open</a></small></p>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
+
         </div>
         <!-- Modal -->
         <div class="modal fade" id="weatherBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
@@ -217,10 +217,95 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <img src="assets/img/weather-dashboard-detail.png" class="card-img-top" id="pour-decisions" alt="...">
+                        <img src="assets/img/weather-dashboard-detail.png" class="card-img-top" id="pour-decisions"
+                            alt="Weather Dashboard">
                         <hr>
                         <img src="assets/img/weather-dashboard-detail-2.png" class="card-img-top" id="pour-decisions"
-                            alt="...">
+                            alt="Weather Dashboard">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of modal -->
+
+        <div class="card">
+            <div class="card-header" id="headingThree">
+                <h2 class="mb-0">
+                    <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        NYT SEARCH
+                    </button>
+                </h2>
+            </div>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#PortfolioAccordian">
+            <div class="card-body">
+                <div class="jumbotron my-0">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-2 m-4">
+                                <img src="assets/img/nyt-archive.png" class="card-img-top" id="nyt-image" alt="NYT">
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-body">
+                                    <h5 class="card-title">NYT SEARCH</h5>
+                                    <hr>
+                                    <p class="lead">Search the NYT archives</p>
+                                    <hr>
+                                    <p class="card-text">The weather dashboard makes three API calls to open weather to
+                                        return the
+                                        daily
+                                        and five day
+                                        forecast for a city the user inputs. The user inputs are saved to local storage
+                                        as user history.
+                                        The user
+                                        history becomes buttons that can activate the API call for the weather forecast.
+                                        <span class="badge badge-light">Javascript</span>
+                                        <span class="badge badge-light">JQUERY</span>
+                                        <span class="badge badge-light">Boostrap</span>
+                                        <span class="badge badge-light">HTML</span>
+                                        <span class="badge badge-light">CSS</span></p>
+                                    <hr>
+                                    <p class="card-text"><small class="text-muted"><button type="button"
+                                                class="btn btn-primary btn-md contact-me" data-toggle="modal"
+                                                data-target="#NYTBackdrop" data-toggle="tooltip" data-placement="top"
+                                                title="View a thumbnail of the page">
+                                                <i class="fas fa-search-location"></i> Thumbnail
+                                            </button>
+                                            <a href="https://github.com/jrtwheeler/NYTSearch" target="_blank"
+                                                class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
+                                                data-placement="top" title="View Github Repository"><i
+                                                    class="fab fa-github"></i> See
+                                                More</a>
+                                            <a href="https://jrtwheeler.github.io/NYTSearch" target="_blank"
+                                                class="btn btn-primary btn-md contact-me m-1" data-toggle="tooltip"
+                                                data-placement="top" title="View Webpage"><i class="fas fa-globe"></i>
+                                                Open</a></small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="NYTBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">NYT SEARCH</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="assets/img/nyt-archive.png" class="card-img-top" id="pour-decisions" alt="NYT">
+                        <hr>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -230,32 +315,6 @@
         </div>
         <!-- End of modal -->
     </div>
-    <div class="card">
-        <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-                    data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Collapsible Group Item #3
-                </button>
-            </h2>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#PortfolioAccordian">
-            <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                richardson ad squid. 3
-                wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa
-                nesciunt laborum
-                eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-                coffee nulla
-                assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-                anderson cred nesciunt
-                sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
-                beer
-                farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                accusamus
-                labore sustainable VHS.
-            </div>
-        </div>
     </div>
     </div>
 
