--- a/index.html
+++ b/index.html
@@ -58,20 +58,17 @@
                             Black and Decker</span>
                     </h2>
                     <br>
-                    <p>
-                        _______________
-                    </p>
+                    <hr class="rule-lines">
                     <p>
                         <a href="https://www.linkedin.com/in/james-w-54270740/" class="contact-list"
-                            target="_blank">LINKED IN / </a>
-                        <a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB / </a>
-                        <a href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"
+                            target="_blank">LINKED IN</a>
+                        <a> / </a>
+                        <a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB</a>
+                        <a> / </a>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTRm2WKIL8udaUOcZXCVm3yrinhqizl94i95SiFVBGaXU1iZIsq3B1RHFCroQ2Mg8V0x-Z4O9ex0TwF/pub"
                             class="contact-list" target="_blank"> RESUME </a>
                     </p>
-
-                    <p>
-                        _______________
-                    </p>
+                    <hr class="hr-contacts">
                 </section>
             </article>
         </section>
