Added published layout to About Me page

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
               target="_blank">LINKED IN </a></span>
             
               <span class="badge badge-light"><a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB </a></span>
-                <span class="badge badge-light"><a href="https://drive.google.com/file/d/1dmIJTgKb7AynOw-nSpyL6B6r0_e_6NBL/view?usp=sharing"
+                <span class="badge badge-light"><a href="https://docs.google.com/document/d/e/2PACX-1vTRm2WKIL8udaUOcZXCVm3yrinhqizl94i95SiFVBGaXU1iZIsq3B1RHFCroQ2Mg8V0x-Z4O9ex0TwF/pub"
                 class="contact-list" target="_blank"> RESUME </a></span>
         </p>
         </section>
