Form page has POST action to send email

--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,7 @@
     <section class="row">
       <article class="col-12 card my-3 mb-5">
         <h1 class="card-header text-info font-weight-bold">Contact</h1>
-
-        <form class="col-7 m-3">
+        <form class="col-7 m-3" action="mailto:jwheele1@gmail.com" method="POST" enctype="text/plain">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
