Added more detailed text on the portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,11 @@
         <p class="lead">This is my portfolio page. All of the front-end and back-end coding in projects on this page was
             written by me.</p>
         <hr class="my-4">
-        <p>I built these projects with a mixture of coffee, grit, HTML, CSS, Javascript, Bulma, Bootstrap, JSON, and
-            JQUERY.
+        <p>I built these projects with a mixture of coffee, grit, Front-End Web Development, HTML 5, CSS 3, Bootstrap 4,
+            Javascript ES6, DOM Manipulation, jQuery, Bash Command Line, Git, GitHub and Version Control, Backend Web
+            Development, Node.js, NPM, Express.js, EJS, REST, APIs, Databases, SQL, MongoDB, Mongoose, Authentication,
+            Firebase, React.js, React Hooks, Web Design, Deployment with GitHub Pages, Heroku and MongoDB Atlas,
+            Python3, Extendscript.
         </p>
         <a class="btn btn-primary btn-lg contact-me" href="contact.html" role="button">Contact Me</a>
     </div>
@@ -95,7 +98,8 @@
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Bulma</span>
                                         <span class="badge badge-light">HTML</span>
-                                        <span class="badge badge-light">CSS</span></p>
+                                        <span class="badge badge-light">CSS</span>
+                                    </p>
                                     <hr>
                                     <p class="card-text"><small class="text-muted"><button type="button"
                                                 class="btn btn-primary btn-md contact-me" data-toggle="modal"
@@ -180,7 +184,8 @@
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Boostrap</span>
                                         <span class="badge badge-light">HTML</span>
-                                        <span class="badge badge-light">CSS</span></p>
+                                        <span class="badge badge-light">CSS</span>
+                                    </p>
                                     <hr>
                                     <p class="card-text"><small class="text-muted"><button type="button"
                                                 class="btn btn-primary btn-md contact-me" data-toggle="modal"
@@ -267,7 +272,8 @@
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Boostrap</span>
                                         <span class="badge badge-light">HTML</span>
-                                        <span class="badge badge-light">CSS</span></p>
+                                        <span class="badge badge-light">CSS</span>
+                                    </p>
                                     <hr>
                                     <p class="card-text"><small class="text-muted"><button type="button"
                                                 class="btn btn-primary btn-md contact-me" data-toggle="modal"
