--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
                                         dropdowns to show the
                                         ingrediants
                                         and recipe.
-                                        <span class="badge badge-light">Javascript</span>
+                                        <span class="badge badge-light">JavaScript</span>
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Bulma</span>
                                         <span class="badge badge-light">HTML</span>
@@ -180,7 +180,7 @@
                                         The user
                                         history becomes buttons that can activate the API call for the weather
                                         forecast.
-                                        <span class="badge badge-light">Javascript</span>
+                                        <span class="badge badge-light">JavaScript</span>
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Boostrap</span>
                                         <span class="badge badge-light">HTML</span>
@@ -268,7 +268,7 @@
                                         as user history.
                                         The user
                                         history becomes buttons that can activate the API call for the weather forecast.
-                                        <span class="badge badge-light">Javascript</span>
+                                        <span class="badge badge-light">JavaScript</span>
                                         <span class="badge badge-light">JQUERY</span>
                                         <span class="badge badge-light">Boostrap</span>
                                         <span class="badge badge-light">HTML</span>
