I added a small potrait to the navbar for each page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
   <!-- Nav bar -->
   <!-- Nav bar -->
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white font-weight-bold" href="./index.html">James Wheeler</a>
+    <a class="navbar-brand text-white font-weight-bold" href="./index.html">
+      <img id="avatar" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" />
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -57,7 +59,7 @@
             on the web. Certified in full stack development from the University of Johns Hopkins, with experience in
             JavaScript, CSS, HTML, JQUERY and responsive web design. Citizen coder who designed automations in
             JavaScript and Python for Adobe stack for Stanley Black and Decker that saved the company forty weeks of
-            manual data entry a year. 
+            manual data entry a year.
           </p>
           <p>
             My automated layout system merited an Eagle Award for SBD employee of the year. To
@@ -72,12 +74,14 @@
           <span class="badge badge-light">wheelewell@yahoo</span>
           <p>
             <span class="badge badge-light"><a href="https://www.linkedin.com/in/james-w-54270740/" class="contact-list"
-              target="_blank">LINKED IN </a></span>
-            
-              <span class="badge badge-light"><a href="https://github.com/jrtwheeler" class="contact-list" target="_blank"> GITHUB </a></span>
-                <span class="badge badge-light"><a href="https://docs.google.com/document/d/e/2PACX-1vTRm2WKIL8udaUOcZXCVm3yrinhqizl94i95SiFVBGaXU1iZIsq3B1RHFCroQ2Mg8V0x-Z4O9ex0TwF/pub"
+                target="_blank">LINKED IN </a></span>
+
+            <span class="badge badge-light"><a href="https://github.com/jrtwheeler" class="contact-list"
+                target="_blank"> GITHUB </a></span>
+            <span class="badge badge-light"><a
+                href="https://docs.google.com/document/d/e/2PACX-1vTRm2WKIL8udaUOcZXCVm3yrinhqizl94i95SiFVBGaXU1iZIsq3B1RHFCroQ2Mg8V0x-Z4O9ex0TwF/pub"
                 class="contact-list" target="_blank"> RESUME </a></span>
-        </p>
+          </p>
         </section>
       </article>
     </section>
