--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Nav bar -->
     <nav class="navbar navbar-dark">
-        <a class="navbar-brand text-white-50" href="./index.html">James Wheeler</a>
+        <a class="navbar-brand text-white-50" href="./index.html"><img id="avatar" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" /></a>
         <button class="navbar-toggler text-white-50" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
