--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <!-- Nav bar -->
     <!-- Nav bar -->
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand text-white font-weight-bold" href="./index.html"><img id="avatar" class="float-left mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" /></a>
+        <a class="navbar-brand text-white font-weight-bold" href="./index.html"><img id="avatar" class="float-left ml-4 mr-2 mb-2" src="./assets/img/mn_portrait.jpg" alt="Card image cap" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
